src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionHeader/ExecutionHeader.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.header {
  overflow: hidden;
  display: flex;
  flex-direction: column;

  .gitRemoteDetailsWrapper {
    margin-left: var(--spacing-xlarge) !important;
  }

  & .headerTopRow {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: var(--spacing-7);
    margin-bottom: var(--spacing-4);
  }

  & .titleContainer {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    height: var(--spacing-7);
    padding: var(--spacing-3) 0;
  }

  & .title {
    font-weight: 600;
    font-size: 20px;
    color: var(--grey-700);
  }

  & .pipelineId {
    font-size: var(--font-size-small);
    color: var(--grey-600);
    margin-left: var(--spacing-3);
  }

  & .tags {
    margin-left: var(--spacing-5) !important;
  }

  & .git {
    margin-left: var(--spacing-5) !important;
  }

  & .actionsBar {
    display: flex;
    align-items: center;
    font-size: var(--font-size-small);
    column-gap: var(--spacing-5);
    margin-left: auto;

    & .startTimeText {
      color: var(--grey-500);
    }

    & .duration {
      font-size: var(--font-size-small);
      color: var(--grey-800);
      display: inline-flex;
      align-items: center;

      :global(.bp3-icon) {
        color: var(--grey-600);
      }
    }
  }

  .view {
    display: inline-flex;
    column-gap: var(--spacing-2);
    background: var(--primary-7);
    align-items: center;
    color: var(--white);
    border: 1px solid currentColor;
    padding: var(--spacing-2) var(--spacing-4);
    border-radius: 4px;

    :global(.bp3-icon path) {
      fill: var(--white) !important;
    }

    &:hover {
      text-decoration: none;
      background: var(--primary-6);
    }
  }
}
.viewLatest {
  cursor: pointer !important;
}

.startTime {
  display: flex;
  align-items: center;
  column-gap: var(--spacing-3);
}

.notesButton {
  padding: 0 !important;
  padding-left: var(--spacing-small) !important;
  .chatButton {
    path {
      stroke: var(--primary-7) !important;
    }
  }
}

